k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tic-tac-toe-web
  namespace: tic-tac-toe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tic-tac-toe-web
  template:
    metadata:
      labels:
        app: tic-tac-toe-web
    spec:
      containers:
        - name: web
          image: harshakc0205/tic-tac-toe:v3   # use v3 fixed image
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 25   # give enough time for MySQL + app to start
            periodSeconds: 5
            failureThreshold: 6
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: tic-tac-toe-web
  namespace: tic-tac-toe
spec:
  type: ClusterIP
  selector:
    app: tic-tac-toe-web
  ports:
    - port: 8000
      targetPort: 8000
